--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,16 @@ version: 1.1.2
 homepage: https://github.com/shaqian/flutter_tflite
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  # sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=3.3.0 <4.0.0'
   flutter: ">=1.10.0"
 
 dependencies:
   flutter:
     sdk: flutter
   
-  meta: ^1.3.0
+  # meta: ^1.3.0
+  meta: ^1.11.0
 
 dev_dependencies:
   flutter_test:
