--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,6 +22,7 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
+    namespace "sq.flutter.tflite"
     compileSdkVersion 34
     defaultConfig {
         minSdkVersion 21
